# CTK-BuildSystem-Tests

./: CMakeLists.txt  README
Testing/: CMakeLists.txt
Testing/CMakeScripts/: CMakeLists.txt  ConfigureAndBuildMyProjectUsingCTKSuperBuildTree.cmake
Using-CTK-SuperBuildTree/: CMakeLists.txt  SuperBuild.cmake
Using-CTK-SuperBuildTree/Base/: CMakeLists.txt
Using-CTK-SuperBuildTree/Base/Core/: CMakeLists.txt  ctkbstestsMyCore.cxx  ctkbstestsMyCore.h
Using-CTK-SuperBuildTree/CMake/: ctkbstestsMacroBuildQtLib.cmake  ctkbstestsMacroParseArguments.cmake
